# cpp-grpc-demo

./: CMakeLists.txt  readme.md
include/: helloworld.pb.h  trait.h
protos/: helloworld.proto
src/: client.cpp  helloworld.pb.cc  server.cpp
